<resources>
    <string name="app_name">Word Calc</string>
    <string name="plus_minus">+/-</string>
    <string name="zero">0</string>
    <string name="word_zero">Zero</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="del">DEL</string>
    <string name="all_clear">AC</string>
    <string name="divide">÷</string>
    <string name="blanks">" "</string>
    <string name="thousand">K</string>
    <string name="Lac">L</string>
    <string name="lac">L</string>
    <string name="crore">Cr</string>
    <string name="million">Mn</string>
    <string name="billion">Bn</string>
    <string name="trillion">Tn</string>
    <string name="hundred">H</string>
</resources>